# PHX-houses-Dec-2025

./: .coverage  .gitignore  .mcp.json  .pre-commit-config.yaml  =2.5.0  Andrew-design-brainstorming-notes.txt  CHANGELOG  CLAUDE.md  CODE_CHANGES_DIFF_2025_12_06.md  CODE_REFERENCE.md  CONFIG_EXTERNALIZATION_INDEX.md  DEDUPLICATOR_TEST_USAGE.md  DELIVERABLES_2025_12_06.md  DELIVERABLE_SUMMARY.md  DELIVERY_SUMMARY.md  EXTERNALIZE_SUMMARY.md  FINAL_CHECKLIST_2025_12_06.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.txt  FIX_SUMMARY_2025_12_06.md  IMPLEMENTATION_GAPS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX_DEDUPLICATOR_TESTS.md  INTEGRATION_VERIFICATION_REPORT.md  MASTER_SUMMARY_2025_12_06.md  README.md  README_FIX_2025_12_06.md  README_TESTING.md  STANDARDIZER_TEST_DELIVERY.md  TEST_COVERAGE_SUMMARY.txt  TEST_DELIVERABLES_INDEX.md  TEST_SUITE_OVERVIEW.txt  TRASH-FILES.md  UNIT_TEST_RESULTS_2025_12_06.md  URL_VALIDATOR_TEST_REFERENCE.md  claude-agent-orchestration-protocols.md  claude.md.project-root.template  gap2_gap3_implementation.py  pyproject.toml  ruff_errors.json  (+6 more)
.claude/: AGENT_BRIEFING.md  AGENT_CONTEXT.md  ARCHITECTURE_QUICK_REFERENCE.md  CLAUDE.md  CLAUDE_MD_USAGE.md  DIRECTORY_SUMMARY.md  SESSION_SUMMARY.txt  STOP_HOOK_TASK.md  SUBAGENT_BRIEFING.md  claude-code-hooks-design.md  claude-pr-checklist.md  hookify.adr-awareness-session.local.md  hookify.block-banned-deps.local.md  hookify.block-data-file-edits.local.md  hookify.block-god-entity-growth.local.md  hookify.block-hardcoded-values.local.md  hookify.block-killswitch-change.local.md  hookify.block-phase-skip.local.md  hookify.block-playwright-zillow.local.md  hookify.block-secrets-commit.local.md  hookify.block-shortcut-comments.local.md  hookify.commit-before-new-work.local.md  hookify.cross-reference-consistency.local.md  hookify.debug-code.local.md  hookify.detect-stale-documentation.local.md  hookify.enforce-ddd-layers.local.md  hookify.enforce-glob-tool.local.md  hookify.enforce-grep-tool.local.md  hookify.enforce-orchestrator-role.local.md  hookify.enforce-read-tool.local.md  hookify.enforce-story-acceptance-criteria.local.md  hookify.enforce-task-delegation.local.md  hookify.enforce-wave-sequencing.local.md  hookify.precommit-hygiene.local.md  hookify.require-claude-md-update.local.md  hookify.require-cross-layer-tests.local.md  hookify.require-live-validation.local.md  hookify.require-retry-decorator.local.md  hookify.require-tests-before-stop.local.md  hookify.schema-change-warning.local.md  (+19 more)
TRASH/: MapConfig.py  gen_9832_deal_sheet.py  proxy_listing_extractor.py  temp_add_fields.py  test_dashboard.html  test_deal_sheets_OLD.py  test_injection_fix.py  test_scorer.py  test_v1_data.json  test_v1_outdated.json  test_zillow_extractor.py  update_lookup.py
config/: CLAUDE.md  README.md  buyer_criteria.yaml  kill_switch.csv  proxies.txt  scoring_weights.yaml  user_agents.txt
data/: CLAUDE.md  enrichment_data.20251202_174128.bak.json  enrichment_data.20251202_174236.bak.json  enrichment_data.20251202_210942.bak.json  enrichment_data.20251202_222456.bak.json  enrichment_data.json  enrichment_data.json.bak  enrichment_data.json.pre_schema_version.bak  enrichment_lu1ikcft.tmp  enrichment_template.json  extraction_report_20251130.json  extraction_report_4560_Sunrise.json  extraction_results.json  field_lineage.20251202_080732.bak.json  field_lineage.20251202_174236.bak.json  field_lineage.20251202_222456.bak.json  field_lineage.json  geocoded_homes.json  image_assessment_4342_w_claremont.json  image_assessment_5004_W_Kaler_Dr.json  orientation_estimates.json  phx_homes.csv  phx_homes_ranked.csv  quality_baseline.json  research_tasks.json  work_items.backup.json  work_items.json
deal_sheets/: 01_8426_e_lincoln_dr.html  02_4209_w_wahalla_ln.html  03_13307_n_84th_ave.html  04_20021_n_38th_ln.html  05_4137_w_cielo_grande.html  06_4001_w_libby_st.html  07_4020_w_anderson_dr.html  08_8714_e_plaza_ave.html  09_4417_w_sandra_cir.html  10_4732_w_davis_rd.html  11_8931_w_villa_rita_dr.html  12_25841_n_66th_dr.html  13_11035_e_clinton_st.html  14_2846_w_villa_rita_dr.html  15_7126_w_columbine_dr.html  16_7233_w_corrine_dr.html  17_9150_w_villa_rita_dr.html  18_2353_w_tierra_buena_ln.html  19_2344_w_marconi_ave.html  20_17244_n_36th_ln.html  21_14014_n_39th_ave.html  22_16814_n_31st_ave.html  23_15225_n_37th_way.html  24_12808_n_27th_st.html  25_5522_w_carol_ave.html  26_4136_w_hearn_rd.html  27_18820_n_35th_way.html  28_14353_n_76th_dr.html  29_5004_w_kaler_dr.html  30_4342_w_claremont_st.html  31_14622_n_37th_st.html  32_18825_n_34th_st.html  33_8803_n_105th_dr.html  index.html
docs/: AI_TECHNICAL_SPEC.md  BROWSER_ISOLATION_SETUP.md  CHANGELOG  CHANGES_VALUE_ZONE_EXTERNALIZE.md  CLAUDE.md  CLEANUP_INDEX.md  CLEANUP_REPORT.txt  CODE_REFERENCE.md  CONFIG_EXTERNALIZATION_INDEX.md  CONFIG_IMPLEMENTATION_GUIDE.md  CONSTANTS_MIGRATION.md  COVERAGE_ROADMAP.md  COVERAGE_SUMMARY.txt  DATA_ENGINEERING_AUDIT.md  DEPRECATION_GUIDE.md  QUICK_REFERENCE.md  RECOMMENDED_TESTS.md  RENOVATION_GAP_README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT.md.bak  SECURITY_INDEX.md  (+36 more)
(+1919 files in other folders)
