[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phx-home-analysis"
version = "1.0.0"
description = "Phoenix metropolitan home listing analysis with kill-switch filtering and weighted scoring"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PHX Home Analysis Team"}
]
keywords = ["real-estate", "analysis", "phoenix", "home-buying"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "pandas==2.3.3",
    "pydantic==2.12.5",
    "jinja2==3.1.6",
    "plotly==6.5.0",
    "folium==0.20.0",
    # Image extraction dependencies
    "Pillow==12.0.0",
    "imagehash==4.3.2",
    "httpx==0.28.1",
    "playwright==1.56.0",  # Keep for fallback
    "beautifulsoup4==4.14.3",
    "python-dotenv==1.2.1",
    # Stealth browser automation (PerimeterX bypass)
    "nodriver==0.48.1",
    "curl-cffi==0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "ruff==0.14.7",
    "mypy==1.19.0",
    "respx==0.22.0",
    "pip-audit==2.7.3",  # Security vulnerability scanner
]

[project.scripts]
phx-analyze = "phx_home_analysis.pipeline.orchestrator:main"

[project.urls]
"Homepage" = "https://github.com/example/phx-home-analysis"
"Documentation" = "https://github.com/example/phx-home-analysis#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/phx_home_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["phx_home_analysis"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
